--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -1,51 +1,34 @@
 {
    "AWSTemplateFormatVersion" : "2010-09-09",
    "Description" : "EC2",
+   "Parameters" : {
+    
+    "STACKNAME": {
+      "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
+      "Type": "String",
+    }
+   },
+
    "Resources" : {
-      "MyEC2Instance" : {
+
+      "EC2" : {
          "Type" : "AWS::EC2::Instance",
          "Properties" : {
             "ImageId" : "ami-41e0b93b",
-            "KeyName" : "testkey",
             "InstanceType" : "t2.micro",
-            
-            
+            "DisableApiTermination" : "true"
+         }
+      },
+
+      "Volume" : {
+         "Type":"AWS::EC2::Volume",
+         "Properties" : {
+            "Size" : 16,
+            "Encrypted" : "false",
+            "VolumeType" : "gp2",
+            "AvailabilityZone" : { "Fn::GetAtt" : [ "EC2", "AvailabilityZone" ] },
          }
       }
    }
-}        
-
-{
-   "Type" : "AWS::EC2::Instance",
-   "Properties" : {
-      "Affinity" : String,
-      "AvailabilityZone" : String,
-      "BlockDeviceMappings" : [ EC2 Block Device Mapping, ... ],
-      "DisableApiTermination" : Boolean,
-      "EbsOptimized" : Boolean,
-      "HostId" : String,
-      "IamInstanceProfile" : String,
-      "ImageId" : String,
-      "InstanceInitiatedShutdownBehavior" : String,
-      "InstanceType" : String,
-      "Ipv6AddressCount" : Integer,
-      "Ipv6Addresses" : [ IPv6 Address Type, ... ],
-      "KernelId" : String,
-      "KeyName" : String,
-      "Monitoring" : Boolean,
-      "NetworkInterfaces" : [ EC2 Network Interface, ... ],
-      "PlacementGroupName" : String,
-      "PrivateIpAddress" : String,
-      "RamdiskId" : String,
-      "SecurityGroupIds" : [ String, ... ],
-      "SecurityGroups" : [ String, ... ],
-      "SourceDestCheck" : Boolean,
-      "SsmAssociations" : [ SSMAssociation, ... ],
-      "SubnetId" : String,
-      "Tags" : [ Resource Tag, ... ],
-      "Tenancy" : String,
-      "UserData" : String,
-      "Volumes" : [ EC2 MountPoint, ... ],
-      "AdditionalInfo" : String
-   }
 }
+      
