--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ deploy:
     bucket: csye6225-assignment4
     region: us-east-1
     skip_cleanup: true
+    on:
+    branch: assginment4
 notifications:
   email:
     recipients:
