--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ notifications:
 
   email:
     recipients:
-      - chen.zena@husky.neu.edu
+      - qiu.che@husky.neu.edu
     on_success: never # default: change
     on_failure: always # default: always    
   
