--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ deploy:
 notifications:
   email:
     recipients:
-      - chen.zena@husky.neu.edu
+      - jia.xi@husky.neu.edu
     on_success: never # default: change
     on_failure: always # default: always    
   
