--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ notifications:
   email:
 
    recipients:
-     - qiu.che@husky.neu.edu
+     - jia.xi@husky.neu.edu
 
     on_success: never # default: change
     on_failure: always # default: always    
