--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ notifications:
   email:
 
    recipients:
-     - jia.xi@husky.neu.edu
-
+     - chen.zena@husky.neu.edu
     on_success: never # default: change
     on_failure: always # default: always    
   
