--- a/.travis.yml
+++ b/.travis.yml
@@ -6,22 +6,13 @@ install:
 after_success:
   -mkdir codedeploy
   -zip -r project-${TRAVIS_JOB_NUMBER}.zip *
-deploy:
-  - provider: s3
-    access_key_id: AKIAI2DZ4SOAINEOXJ4A
-    secret_access_key: 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
-    bucket: csye6225-assignment4
-    region: us-east-1
-    skip_cleanup: true
-    on:
-    all_branches: true
 notifications:
 
   email:
 
    recipients:
   
-
+    -chen.zena@husky.neu.edu
     on_success: never # default: change
     on_failure: always # default: always   
   
