--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -53,7 +53,7 @@
       "Volume" : {
          "Type":"AWS::EC2::Volume",
          "Properties" : {
-            "Size" : { "Ref" : "size" },
+            "Size" : { "Ref" : "Size" },
             "Encrypted" : "true",
             "VolumeType" : { "Ref" : "VolumeType" },
             "AvailabilityZone" : { "Fn::GetAtt" : [ "EC2", "AvailabilityZone" ] },
