--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "element-ui": "^2.0.11",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
     "glob": "^7.1.2",
     "highlight.js": "^9.12.0",
     "jsonwebtoken": "^8.1.0",
@@ -43,6 +44,7 @@
     "vue": "^2.4.2",
     "vue-clock": "^0.3.1",
     "vue-digital-clock": "^1.5.0",
+    "vue-ls": "^2.3.3",
     "vue-router": "^2.7.0",
     "vue-simplemde": "^0.4.6",
     "vuex": "^3.0.0"
