--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -58,7 +58,54 @@
             "VolumeType" : { "Ref" : "VolumeType" },
             "AvailabilityZone" : { "Fn::GetAtt" : [ "EC2", "AvailabilityZone" ] },
          }
+      },
+
+      "myDynamoDBTable" : {
+        "Type" : "AWS::DynamoDB::Table",
+        "Properties" : {
+          "AttributeDefinitions" : [
+            {
+              "AttributeName" : "id",
+              "AttributeType" : "S"   
+            }
+          ],
+          "KeySchema" : [
+            {
+              "AttributeName" : "id",
+              "KeyType" : "HASH"
+            }
+          ],
+          "ProvisionedThroughput" : {
+            "ReadCapacityUnits" : "5",
+            "WriteCapacityUnits" : "5"
+          },
+          "TableName" : "csye6225"
+        }
+      },
+
+      "RecordServiceS3Bucket" : {
+        "Type" : "AWS::S3::Bucket",
+         "Properties" : {
+           "BucketName" : "s3.csye6225-spring2018-zenan.me"
+        }
+      },
+
+      "MyDB" : {
+        "Type" : "AWS::RDS::DBInstance",
+        "Properties" : {
+          "DBName" : "csye6225",
+          "Engine" : "MySQL",
+          "EngineVersion" : "5.6.37",
+          "DBInstanceClass" : "db.t2.medium",
+          "MultiAZ" : "false",
+          "DBInstanceIdentifier" : "csye6225-spring2018",
+          "MasterUsername" : "csye6225master",
+          "MasterUserPassword" : "csye6225password",
+          "PubliclyAccessible" : "false",
+          "Tags" : [ { "Key" : "Name", "Value" : "csye6225" } ],
+          "AllocatedStorage" : "10"
+        }
       }
-   }
+    } 
 }
       
