--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ after_success:
 notifications:
   email:
     recipients:
-      - chen.zena@husky.neu.edu
+      - jia.xi@husky.neu.edu
     on_success: never # default: change
     on_failure: always # default: always   
   
