--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,14 @@ language: node_js
 node_js:
   - "8"
 install:
-  - npm install    
+  - npm install
+
+branches:
+  only:
+  - $branch 
+
 after_success:
-  - mkdir codedeploy
-  - zip -r project-${TRAVIS_JOB_NUMBER}.zip *
+
 notifications:
   email:
     recipients:
