--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ script:
   - pwd
   - ls
 after_success:
+  - mkdir codedeploy 
+  - zip -r csye6225-project-${TRAVIS_JOB_NUMBER}.zip *  infrastructure/aws/codedeploy
+  - mv csye6225-project-${TRAVIS_JOB_NUMBER}.zip codedeploy/
+  - ls 
 
 notifications:
   email:
