--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ after_success:
   - zip -r csye6225-project-${TRAVIS_JOB_NUMBER}.zip * -x node_modules/\*
   - mv csye6225-project-${TRAVIS_JOB_NUMBER}.zip codedeploy/
   - ls 
+  - cd codedeploy
+  - ls
 
 notifications:
   email:
