--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,15 @@ after_success:
   - ls 
   - cd codedeploy
   - ls
+deploy:
+  - provider: s3
+    local_dir: codedeploy
+    region: us-east-1
+    skip_cleanup: true
+    access_key_id: $access_key_id
+    secret_access_key: $secret_access_key
+    on:
+      branch: assignment6
 
 notifications:
   email:
