--- a/infrastructure/aws/codedeploy/appspec.yml
+++ b/infrastructure/aws/codedeploy/appspec.yml
@@ -9,7 +9,21 @@ branches:
   only:
   - $branch
 
-
+after_success:
+  - pwd
+  - ls -al
+  - mkdir codedeploy
+  - zip -r csye6225-web-app-$TRAVIS_JOB_NUMBER.zip webapp/build/libs/ROOT.war infrastructure/aws/codedeploy/appspec.yml
+  - ls -al
+  - mv csye6225-web-app-$TRAVIS_JOB_NUMBER.zip codedeploy/
+  - ls -al
+  - pwd
+  - cd codedeploy
+  - ls -al
+  - pwd
+  - cd ..
+  - pwd
+  - ls -al
 
 script:
   - pwd
