--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,38 @@
-language: java
-jdk:
-  - oraclejdk8
-
-sudo: false
-install: true
+language: node_js,
+node_js: 8,
+install: 
+  - npm install
 
 branches:
   only:
-  - $branch
-
+  - assignment6 
 script:
   - pwd
-  - cd webapp
-  - ./gradlew war
-  - cd ..
-  - pwd
-  - ls -al
+  - ls
 
 after_success:
-  - pwd
-  - ls -sl
-  - mkdir codedeploy_artifact
-  - zip -r csye6225-web-app-$TRAVIS_JOB_NUMBER.zip webapp/build/libs/ROOT.war infrastructure/aws/codedeploy
-  - ls -al
-  - mv csye6225-web-app-$TRAVIS_JOB_NUMBER.zip codedeploy_artifact/
-  - ls -al
-  - pwd
-  - cd codedeploy_artifact
-  - ls -al
-  - pwd
+  - mkdir codedeploy
+  - zip -r csye6225-web-app-$TRAVIS_JOB_NUMBER.zip * -x node_modules/\*
+  - ls
+  - mv csye6225-web-app-$TRAVIS_JOB_NUMBER.zip codedeploy/
+  - ls 
   - cd ..
-  - pwd
-  - ls -al
+  
 
 deploy:
   - provider: s3
-    local_dir: codedeploy_artifact
+    local_dir: codedeploy
     bucket: $s3_bucket
     region: us-east-1
     skip_cleanup: true
     access_key_id: $access_key_id
     secret_access_key: $secret_access_key
     on:
-      branch: $branch
+      branch: assignment6
+
+notification:
+  email:
+    recipients:
+      - jia.xi@husky.neu.edu
+    on_success: never
+    on_failure: always
