--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 
 after_success:
   - mkdir codedeploy
-  - zip -r csye6225-project-$TRAVIS_JOB_NUMBER.zip -x "node_modules"
+  - zip -r csye6225-project-$TRAVIS_JOB_NUMBER.zip -x node_modules/\*
   - ls
   - mv csye6225-project-$TRAVIS_JOB_NUMBER.zip codedeploy/
   - ls 
