--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - ls
 after_success:
   - mkdir codedeploy
-  - zip -r csye6225-project-${TRAVIS_JOB_NUMBER}.zip * -x node_modules/\*
+  - zip -r csye6225-project.zip * -x node_modules/\*
   - mv csye6225-project-${TRAVIS_JOB_NUMBER}.zip codedeploy/
   - ls 
   - cd codedeploy
