--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -5,12 +5,12 @@
     
     "STACKNAME": {
       "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
-      "Type": "String",
+      "Type": "String"
     },
 
     "ImageId" : {
       "Type" : "String",
-      "Default" : "ami-66506c1c",
+      "Default" : "ami-66506c1c"
     },
 
     "InstanceType" : {
@@ -22,32 +22,58 @@
 
     "Size" : {
       "Type" : "Number",
-      "Default" : "16",
+      "Default" : "16"
     },
 
     "VolumeType" : {
       "Type" : "String",
-      "Default" : "gp2",
-    },
+      "Default" : "gp2"
+    }
 
    },
 
    "Resources" : {
 
       "EC2" : {
-
          "Type" : "AWS::EC2::Instance",
          "Properties" : {
             "ImageId" : { "Ref" : "ImageId" },
+            "SecurityGroupIds": [
+              "sg-02cdd975"
+            ],
+            "SubnetId": "subnet-3559080a", 
+            "KeyName": "MyKeyPair",
             "InstanceType" : { "Ref" : "InstanceType" },
             "DisableApiTermination" : "true",
+            "UserData": {
+              "Fn::Base64": {
+                  "Fn::Join": [
+                    "",
+                    [
+                      "#!/bin/bash -xe \n",
+                      "sudo apt-get update \n",
+                      "sudo apt-get install ruby -y \n",
+                      "sudo apt-get install nodejs -y \n",
+                      "sudo apt-get install npm -y \n",
+                      "sudo apt-get install wget -y \n",
+                      "sudo apt-get install python -y \n",
+                      "sudo apt-get update \n",
+                      "sudo wget https://aws-codedeploy-us-east-1.s3.amazonaws.com/latest/install \n",
+                      "sudo chmod +x ./install \n",
+                      "sudo ./install auto \n",
+                      "sudo service codedeploy-agent start \n"
+                    ]
+                  ]
+              }
+            },
+
             "Tags" : [
                {
                  "Key" : "Name",
                  "Value" : "MyTag"
                },  
-            ]
-         },
+            ]           
+         }
       },
 
       "Volume" : {
@@ -83,29 +109,13 @@
         }
       },
 
-      "RecordServiceS3Bucket" : {
+      "ImageS3Bucket" : {
         "Type" : "AWS::S3::Bucket",
          "Properties" : {
            "BucketName" : "s3.csye6225-spring2018-zenan.me"
         }
       },
 
-      "MyDB" : {
-        "Type" : "AWS::RDS::DBInstance",
-        "Properties" : {
-          "DBName" : "csye6225",
-          "Engine" : "MySQL",
-          "EngineVersion" : "5.6.37",
-          "DBInstanceClass" : "db.t2.medium",
-          "MultiAZ" : "false",
-          "DBInstanceIdentifier" : "csye6225-spring2018",
-          "MasterUsername" : "csye6225master",
-          "MasterUserPassword" : "csye6225password",
-          "PubliclyAccessible" : "false",
-          "Tags" : [ { "Key" : "Name", "Value" : "csye6225" } ],
-          "AllocatedStorage" : "10"
-        }
-      }
     } 
 }
       
