--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,16 @@ script:
   - pwd
   - ls
 after_success:
-  - mkdir codedeploy
+  - mkdir codedeploy_artifact
   - zip -r csye6225-project.zip * -x node_modules/\*
   - mv csye6225-project-${TRAVIS_JOB_NUMBER}.zip codedeploy/
   - ls 
-  - cd codedeploy
+  - cd codedeploy_artifact
   - ls
   - cd ..
 deploy:
   - provider: s3
-    local_dir: codedeploy
+    local_dir: codedeploy_artifact
     bucket: $s3_bucket
     region: us-east-1
     skip_cleanup: true
