--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 after_success:
   - mkdir codedeploy_artifact
   - zip -r csye6225-project.zip * -x node_modules/\*
-  - mv csye6225-project-${TRAVIS_JOB_NUMBER}.zip codedeploy/
+  - mv csye6225-project.zip codedeploy/
   - ls 
   - cd codedeploy_artifact
   - ls
