--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,19 @@ deploy:
     on:
       branch: assignment6
 
+  - provider: codedeploy
+    access_key_id: $access_key_id
+    bucket: $s3_bucket
+    key: csye6225-project.zip
+    bundle_type: zip
+    application: $application
+    deployment_group: $deployment_group
+    region: us-east-1
+    secret_access_key: $secret_access_key
+    wait-until-deployed: true
+    on:
+      branch: master    
+
 
 notification:
 
