--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,6 @@ deploy:
     secret_access_key: $secret_access_key
     on:
       branch: assignment6
-
   - provider: codedeploy
     access_key_id: $access_key_id
     bucket: $s3_bucket
@@ -50,7 +49,7 @@ deploy:
     secret_access_key: $secret_access_key
     wait-until-deployed: true
     on:
-      branch: master    
+      branch: assignment6    
 
 
 notification:
