--- a/appspec.yml
+++ b/appspec.yml
@@ -2,8 +2,7 @@ version: 0.0
 os: linux
 
 files:             
-  - source: /*
+  - source: ./appspec.yml
     destination: /home/ubuntu
 
 hooks:
-  
