--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,9 @@ os: linux
 files:             
   - source: ./appspec.yml
     destination: /home/ubuntu
-    
+  - source: ./
+    destination: /home/ubuntu  
+
 hooks:
   AfterInstall:
     - location: infrastructure/aws/cloudformation/test.sh
