--- a/appspec.yml
+++ b/appspec.yml
@@ -2,9 +2,7 @@ version: 0.0
 os: linux
 
 files:             
-  - source: ./appspec.yml
-    destination: /home/ubuntu
-  - source: ./
+  - source: /
     destination: /home/ubuntu  
 
 hooks:
