--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,9 @@ os: linux
 files:             
   - source: /
     destination: /home/ubuntu  
+
+hooks:
+  AfterInstall:
+    - location: ./scripts/startapplication.sh
+      runas: root
+      timeout: 300
