--- a/appspec.yml
+++ b/appspec.yml
@@ -7,10 +7,10 @@ files:
 
 hooks:
   AfterInstall:
-    - location: /scripts/startapplication.sh
+    - location: /scripts/npminstall.sh
       runas: root
       timeout: 300
   ApplicationStart:
-    - location: scripts/startapplication.sh
+    - location: /scripts/startapplication.sh
       runas: root
       timeout: 60    
