--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -34,6 +34,17 @@
       "Type" : "String",
       "Default" : ""
     },
+
+    "PrivateSubnetId1":{
+      "Type" : "String",
+      "Default" : ""
+    },
+
+    "PrivateSubnetId2":{
+      "Type" : "String",
+      "Default" : ""
+    },
+
     "ec2SG":{
       "Type" : "String",
       "Default" : ""
@@ -116,6 +127,33 @@
             "WriteCapacityUnits" : "5"
           },
           "TableName" : "csye6225"
+        }
+      },
+
+      "myDBSubnetGroup" : {
+         "Type" : "AWS::RDS::DBSubnetGroup",
+         "Properties" : {
+            "DBSubnetGroupDescription" : "description",
+            "SubnetIds" : [ {"Ref" : "PrivateSubnetId1" }, {"Ref" : "PrivateSubnetId2" } ],
+            "Tags" : [ {"Key" : "String", "Value" : "String"} ]
+         }
+      },
+
+      "MyDB" : {
+        "Type" : "AWS::RDS::DBInstance",
+        "Properties" : {
+          "DBName" : "csye6225",
+          "Engine" : "MySQL",
+          "EngineVersion" : "5.6.37",
+          "DBInstanceClass" : "db.t2.medium",
+          "DBSubnetGroupName": {"Ref" : "myDBSubnetGroup" },
+          "MultiAZ" : "false",
+          "DBInstanceIdentifier" : "csye6225-spring2018",
+          "MasterUsername" : "csye6225master",
+          "MasterUserPassword" : "csye6225password",
+          "PubliclyAccessible" : "false",
+          "Tags" : [ { "Key" : "Name", "Value" : "csye6225" } ],
+          "AllocatedStorage" : "10"
         }
       },
 
