--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 
 after_success:
   - mkdir codedeploy_artifact
-  - zip -r csye6225-project.zip * -x node_modules/\*
+  - zip -r csye6225-project.zip * .* -x node_modules/\*
   - mv csye6225-project.zip codedeploy_artifact/
   - ls 
   - cd codedeploy_artifact
@@ -38,19 +38,6 @@ deploy:
     secret_access_key: $secret_access_key
     on:
       branch: assignment6
-  - provider: codedeploy
-    access_key_id: $access_key_id
-    bucket: $s3_bucket
-    key: csye6225-project.zip
-    bundle_type: zip
-    application: $application
-    deployment_group: $deployment_group
-    region: us-east-1
-    secret_access_key: $secret_access_key
-    wait-until-deployed: true
-    on:
-      branch: assignment6    
-
 
 notification:
 
