--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,6 @@ after_success:
   - ls
   - cd ..
 
-  
-
-
 deploy:
   - provider: s3
     local_dir: codedeploy_artifact
@@ -38,6 +35,18 @@ deploy:
     secret_access_key: $secret_access_key
     on:
       branch: assignment6
+  - provider: codedeploy
+    access_key_id: $access_key_id
+    bucket: $s3_bucket
+    key: csye6225-project.zip
+    bundle_type: zip
+    application: $application
+    deployment_group: $deployment_group
+    region: us-east-1
+    secret_access_key: $secret_access_key
+    wait-until-deployed: true
+    on:
+      branch: assignment6    
 
 notification:
 
