--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 branches:
   only:
-  - assignment6 
+  - master 
 
 script:
   - pwd
@@ -34,7 +34,7 @@ deploy:
     access_key_id: $access_key_id
     secret_access_key: $secret_access_key
     on:
-      branch: assignment6
+      branch: master
   - provider: codedeploy
     access_key_id: $access_key_id
     bucket: $s3_bucket
@@ -46,7 +46,7 @@ deploy:
     secret_access_key: $secret_access_key
     wait-until-deployed: true
     on:
-      branch: assignment6    
+      branch: master    
 
 notification:
 
