--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -79,7 +79,7 @@
         "Type":"AWS::AutoScaling::AutoScalingGroup",
         "Properties":{
           "LaunchConfigurationName":{"Ref":"LaunchConfig"},
-          "VPCZoneIdentifier":[{"Ref":"PrivateSubnetId1"},{"Ref":"PrivateSubnetId2"}],
+          "VPCZoneIdentifier":[{"Ref":"PublicSubnetId1"},{"Ref":"PublicSubnetId2"}],
           "TargetGroupARNs":[{"Ref":"LBTargetGroup"}],
           "MinSize":"3",
           "MaxSize":"7",
@@ -218,6 +218,7 @@
       "LoadBalancer":{
         "Type":"AWS::ElasticLoadBalancingV2::LoadBalancer",
         "Properties":{
+          "SecurityGroups":[{"Ref": "LBSG"}],
           "Subnets":[{
             "Ref":"PublicSubnetId1"
           },{
@@ -279,7 +280,7 @@
           "HealthCheckIntervalSeconds":"30",
           "HealthCheckTimeoutSeconds":"5",
           "HealthyThresholdCount":"3",
-          "Port":"80",
+          "Port":"8080",
           "Protocol":"HTTP",
           "UnhealthyThresholdCount":"5",
           "VpcId":{"Ref":"csye6225vpc"}
@@ -317,20 +318,42 @@
                         "IpProtocol": "tcp",
                         "FromPort": "8080",
                         "ToPort": "8080",
-                        "SourceSecurityGroupId":{
-                          "Fn::Select":[
-                            0,
-                            {
-                              "Fn::GetAtt":["LoadBalancer","SecurityGroups"]
-                            }
-                          ]
-                        }
+                        "CidrIp": "0.0.0.0/0"
                     },
                     {
                         "IpProtocol": "tcp",
                         "FromPort": "3000",
                         "ToPort": "3000",
                         "CidrIp": "0.0.0.0/0"
+                    }
+                ]
+            }
+      },
+
+      "LBSG": {
+            "Type": "AWS::EC2::SecurityGroup",
+            "Properties": {
+                "VpcId": {
+                    "Ref": "csye6225vpc"
+                },
+                "GroupName": "LoadBalancer-SG",
+                "GroupDescription": "LB SecurityGroup",
+                "SecurityGroupIngress": [
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "443",
+                        "ToPort": "443",
+                        "CidrIp": "0.0.0.0/0"
+                    }
+                ],
+                "SecurityGroupEgress": [   
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "443",
+                        "ToPort": "8080",
+                        "DestinationSecurityGroupId":{
+                          "Ref": "ec2SG"
+                        }
                     }
                 ]
             }
@@ -381,27 +404,6 @@
             }
           
         }
-      },
-
-      "MyDB" : {
-        "Type" : "AWS::RDS::DBInstance",
-        "Properties" : {
-          "DBName" : "csye6225",
-          "Engine" : "MySQL",
-          "EngineVersion" : "5.6.37",
-          "DBInstanceClass" : "db.t2.medium",
-          "VPCSecurityGroups" : [
-            {"Ref" : "DBSecurityGroup"}
-          ],
-          "DBSubnetGroupName": {"Ref" : "myDBSubnetGroup" },
-          "MultiAZ" : "false",
-          "DBInstanceIdentifier" : "csye6225-spring2018",
-          "MasterUsername" : "csye6225master",
-          "MasterUserPassword" : "csye6225password",
-          "PubliclyAccessible" : "false",
-          "Tags" : [ { "Key" : "Name", "Value" : "csye6225" } ],
-          "AllocatedStorage" : "10"
-        }    
       },
 
       "myDBSubnetGroup" : {
