--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -63,7 +63,7 @@
 
     "domainName":{
       "Type":"String",
-      "Default":"csye6225-spring2018-jiaxi.me."
+      "Default":"csye6225-spring2018-zenan.me."
     },
 
     "EC2Profile":{
@@ -406,6 +406,27 @@
         }
       },
 
+      "MyDB" : {
+        "Type" : "AWS::RDS::DBInstance",
+        "Properties" : {
+          "DBName" : "csye6225",
+          "Engine" : "MySQL",
+          "EngineVersion" : "5.6.37",
+          "DBInstanceClass" : "db.t2.medium",
+          "VPCSecurityGroups" : [
+            {"Ref" : "DBSecurityGroup"}
+          ],
+          "DBSubnetGroupName": {"Ref" : "myDBSubnetGroup" },
+          "MultiAZ" : "false",
+          "DBInstanceIdentifier" : "csye6225-spring2018",
+          "MasterUsername" : "csye6225master",
+          "MasterUserPassword" : "csye6225password",
+          "PubliclyAccessible" : "false",
+          "Tags" : [ { "Key" : "Name", "Value" : "csye6225" } ],
+          "AllocatedStorage" : "10"
+        }    
+      },
+
       "myDBSubnetGroup" : {
          "Type" : "AWS::RDS::DBSubnetGroup",
          "Properties" : {
@@ -429,7 +450,7 @@
       "ImageS3Bucket" : {
         "Type" : "AWS::S3::Bucket",
          "Properties" : {
-           "BucketName" : "s3.csye6225-spring2018-jiaxi.me"
+           "BucketName" : "s3.csye6225-spring2018-zenan.me"
         }
       }
   }
