--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,6 @@ notification:
 
   email:
     recipients:
-      - jia.xi@husky.neu.edu
+      - chen.zena@husky.neu.edu
     on_success: never
     on_failure: always
